add media queries
this make the website responsive

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 <div class="container">
   <div class="inputs">
    <ul>
-    <span>DAYS</span> <input type="text" placeholder="DD">
+    <span>DAYS</span><input type="text" placeholder="DD">
    </ul>
    <ul>
-    <span>MONTH</span> <input type="text" placeholder="MM">
+    <span>MONTH</span><input type="text" placeholder="MM">
    </ul>
    <ul>
-    <span>YEAR</span> <input type="text" placeholder="YYYY">
+    <span>YEAR</span><input type="text" placeholder="YYYY">
    </ul>
   </div>
   <div class="button-hyper">
     <div class="hyper"><hr></div>
-    <button><img src="./images/icon-arrow.svg" alt="no image"></button>
+    <button><img src="./images/icon-arrow.svg" alt="no image"></button> 
+    <div class="hyper2"><hr></div>
   </div>
   <ul class="converted">
     <li><span>--</span>years</li>
@@ -35,9 +36,8 @@
 
 
 <!-- about -->
-<!-- <div class="attribution">
+<div class="attribution"> 
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="#">Abdulhaq</a>
-</div> -->
 </body>
 </html>
